// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`基础信息测试-API配置项 1`] = `
Object {
  "x": 0,
}
`;

exports[`基础信息测试-默认渲染设置/边距 1`] = `
Object {
  "renderer": "svg",
}
`;

exports[`基础信息测试-默认配置项 1`] = `
Object {
  "barWidth": 40,
  "titleFontSize": 16,
  "valueFontSize": 40,
}
`;

exports[`默认配置项测试 1`] = `
Object {
  "angleAxis": Object {
    "axisLabel": Object {
      "show": false,
    },
    "axisLine": Object {
      "show": false,
    },
    "axisTick": Object {
      "show": false,
    },
    "clockwise": true,
    "max": 100,
    "splitLine": Object {
      "show": false,
    },
  },
  "polar": Object {
    "center": Array [
      "50%",
      "50%",
    ],
    "radius": "160%",
  },
  "radiusAxis": Object {
    "axisLabel": Object {
      "show": false,
    },
    "axisLine": Object {
      "show": false,
    },
    "axisTick": Object {
      "show": false,
    },
    "splitLine": Object {
      "show": false,
    },
    "type": "category",
  },
  "series": Array [
    Object {
      "barGap": "-100%",
      "barWidth": 40,
      "coordinateSystem": "polar",
      "data": Array [
        Object {
          "itemStyle": Object {
            "color": LinearGradient {
              "colorStops": Array [
                Object {
                  "color": "#aaf14f",
                  "offset": 0,
                },
                Object {
                  "color": "#0acfa1",
                  "offset": 1,
                },
              ],
              "global": false,
              "type": "linear",
              "x": 1,
              "x2": 0,
              "y": 0,
              "y2": 0,
            },
          },
          "name": "比例",
          "value": 45.7,
        },
      ],
      "roundCap": true,
      "type": "bar",
      "z": 2,
    },
    Object {
      "barGap": "-100%",
      "barWidth": 40,
      "coordinateSystem": "polar",
      "data": Array [
        Object {
          "itemStyle": Object {
            "color": "#e2e2e2",
            "shadowBlur": 5,
            "shadowColor": "rgba(0, 0, 0, 0.2)",
            "shadowOffsetY": 2,
          },
          "value": 100,
        },
      ],
      "roundCap": true,
      "type": "bar",
      "z": 1,
    },
  ],
  "title": Object {
    "itemGap": -10,
    "left": "center",
    "subtext": "百分比环图_MOCK数据",
    "subtextStyle": Object {
      "color": "#f2f2f2",
      "fontSize": 16,
    },
    "text": 45.7,
    "textStyle": Object {
      "color": "#01c4a3",
      "fontSize": 40,
    },
    "top": "center",
  },
}
`;
